# gpu_rl

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
docs/: AMD_SCOPE.md  BENCHMARK_FIDELITY_AND_ANTI_STALE_NOTE.md  BENCHMARK_POLICY.md  DATA_GOVERNANCE.md  FINAL_LOCAL_TRAINING_STATUS.md  FINAL_TOOLING_ENVIRONMENT_COMPLETION_NOTE.md  FIRST_WAVE_TASKS.md  GLOSSARY.md  KERNELBENCH_V3_INTEGRATION_NOTE.md  LOCAL_OPTIMIZE_TRAINING_OPERATOR_NOTE.md  LOCAL_PLATFORM_STATUS.md  MODAL_SANDBOX_MVP.md  NEW_TASK_FAMILY_ONBOARDING_TEMPLATE.md  OBSERVABILITY_SURFACE.md  OPTIMIZE_LANE_CONTRACT.md  OPTIMIZE_REWARD_SCHEMA.md  OPTIMIZE_TASK_FAMILY_CONFORMANCE_CHECKLIST.md  OPTIMIZE_TRACE_SELECTION_CRITERIA.md  PACKET_CONFORMANCE_NOTE.md  PHASE3_OPTIMIZE_LOOP_NOTE.md  PHASE5A_TRANCHE_UPDATE.md  PHASE5_ARTIFACT_FEEDBACK_DISTILL_V1.md  PHASE5_NARROW_RL_COMPARISON_V1.md  PHASE5_OPERATOR_NOTE.md  PHASE5_POLICY_LEARNING_VIEWS_V1.md  POLICY_INTERFACE.md  PROJECT_SCOPE.md  REMOTE_SANDBOX_ABSTRACTION.md  REPLAY_COMPARE.md  RETRIEVAL_GUIDE.md  SPARK_EXECUTION_TRACK.md  SPARK_GB10_TROUBLESHOOTING.md
gpu_cockpit/: __init__.py  versions.py
knowledge/: README.md
scripts/: archive_spark_smoke_run.py  build_dataset_governance_report.py  build_first_target_training_assets.py  build_gpt54_first_wave_baseline_report.py  build_gpt54_optimize_ablation_report.py  build_gpt54_second_wave_kernel_push_report.py  build_h200_handoff.py  build_heldout_baseline_report.py  build_optimize_checkpoint_leaderboard.py  build_optimize_rwr_dataset.py  (+40 more)
(+1632 files in other folders)
